--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
     
     <title><!-- title --></title>
     <!-- description -->
+    <script>
+        var initial_state = null;
+    </script>
 </head>
 <body>
     <div id="app"></div>
