--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
         <meta name="yandex-verification" content="298ae72b445ff952" />
         <meta name="yandex-verification" content="7e7652cb40b75404" />
         
+        <script src="https://www.google.com/recaptcha/api.js?render=6LdhWpIdAAAAAA4eceqTfNH242EGuIleuWAGQ2su"></script>
+
         <!-- meta -->
         
         <title><!-- title --></title>
