--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 
     		gtag('config', 'UA-148366601-1');
     	</script>
-        <script>
+        <!-- <script>
             !function(f,b,e,v,n,t,s)
             {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
             n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -75,7 +75,8 @@
         </script>
         <noscript>
             <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=662049530844970&ev=PageView&noscript=1"/>
-        </noscript>
+        </noscript> -->
+        
         <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?162",t.onload=function(){VK.Retargeting.Init("VK-RTRG-409134-7MvqQ"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-409134-7MvqQ" style="position:fixed; left:-999px;" alt=""/></noscript>
 
     </body>
