--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,13 @@
         <div id="app"></div>
         
         
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+		/>
+
+		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
         <!-- Yandex.Metrika counter -->
     	<script type="text/javascript" >
     		(function (d, w, c) {
