--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 			href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
 		/>
 
-		<script async src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
         <!-- Yandex.Metrika counter -->
     	<script type="text/javascript" async>
