--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
         
         <script async type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?162",t.onload=function(){VK.Retargeting.Init("VK-RTRG-409134-7MvqQ"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-409134-7MvqQ" style="position:fixed; left:-999px;" alt=""/></noscript>
 
-        <script async src="https://www.google.com/recaptcha/api.js?render=6LdhWpIdAAAAAA4eceqTfNH242EGuIleuWAGQ2su"></script>
+        <script src="https://www.google.com/recaptcha/api.js?render=6LdhWpIdAAAAAA4eceqTfNH242EGuIleuWAGQ2su"></script>
         <script async src="https://api-maps.yandex.ru/2.1/?apikey=ae2bad1f-486e-442b-a9f7-d84fff6296db&lang=ru_RU"></script>
 
 		<!-- city_script -->
