--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
         <title><!-- title --></title>
         <!-- description -->
         <script>
+			var globalDevice = null;
             var initial_state = null;
         </script>
 		<script src="https://www.google.com/recaptcha/api.js?render=6LdhWpIdAAAAAA4eceqTfNH242EGuIleuWAGQ2su"></script>
