--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,11 @@
         
         <title><!-- title --></title>
         <!-- description -->
-        <script>
+		<script>
 			var globalDevice = null;
-            var initial_state = null;
+        </script>
+        <script>
+			var initial_state = null;
         </script>
 		<script src="https://www.google.com/recaptcha/api.js?render=6LdhWpIdAAAAAA4eceqTfNH242EGuIleuWAGQ2su"></script>
     </head>
