--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <title><!-- title --></title>
         <!-- description -->
 		<script>
-			var globalDevice = null;
+			var GLOBAL_DEVICE = null;
         </script>
         <script>
 			var initial_state = null;
