--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <script>
 			var initial_state = null;
         </script>
-		<script src="https://www.google.com/recaptcha/api.js?render=6LdhWpIdAAAAAA4eceqTfNH242EGuIleuWAGQ2su"></script>
+		<script defer src="https://www.google.com/recaptcha/api.js?render=6LdhWpIdAAAAAA4eceqTfNH242EGuIleuWAGQ2su"></script>
     </head>
     <body>
         <div id="app"></div>
