--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
 			var initial_state = null;
         </script>
 		<script defer src="https://www.google.com/recaptcha/api.js?render=6LdhWpIdAAAAAA4eceqTfNH242EGuIleuWAGQ2su"></script>
+		<meta name="mailru-domain" content="TcSqotFIUFiXtpTX" />
     </head>
     <body>
         <div id="app"></div>
