--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 			var initial_state = null;
         </script>
 		<script defer src="https://www.google.com/recaptcha/api.js?render=6LdhWpIdAAAAAA4eceqTfNH242EGuIleuWAGQ2su"></script>
-		
+		<script src="https://securecardpayment.ru/payment/modules/sbol-pay/sbol-pay.js"></script>
     </head>
     <body>
         <div id="app"></div>
