--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
         </script>
 		<script defer src="https://www.google.com/recaptcha/api.js?render=6LdhWpIdAAAAAA4eceqTfNH242EGuIleuWAGQ2su"></script>
 		<script src="https://securecardpayment.ru/payment/modules/sbol-pay/sbol-pay.js"></script>
+
+		<script defer src="https://yookassa.ru/checkout-widget/v1/checkout-widget.js"></script>
     </head>
     <body>
         <div id="app"></div>
